[build-system]
requires = ["Cython >= 0.29, < 1", "setuptools >= 67", "wheel >= 0.40"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrfc"
version = "3.0"
readme = "README.md"
license = { file = "LICENSES/Apache-2.0.txt" }
description = "Python bindings for SAP NetWeaver RFC SDK"
authors = [ { name = "SAP SE"}, { email = "srdjan.boskovic@sap.com" } ]
maintainers = [ { name = "Srdjan Boskovic", email = "srdjan.boskovic@sap.com" } ]
requires-python = ">=3.8"
keywords = ["pyrfc", "sap", "nwrfc", "sapnwrfc", "abap"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies = []

[project.urls]
bug-tracker = "https://github.com/wntrblm/nox/issues"
documentation = "http://sap.github.io/PyRFC"
homepage = "https://github.com/SAP/PyRFC"
repository = "https://github.com/SAP/PyRFC.git"

[tool.cython-lint]
max-line-length = 172

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false
license-files=["LICENSES/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyrfc"]

[tool.pytest.ini_options]
minversion = "7.3"
testpaths =["tests"]

[tool.ruff]
select = [
  "C90",    # McCabe cyclomatic complexity
  "E",      # pycodestyle
  "F",      # Pyflakes
  "ICN",    # flake8-import-conventions
  "INT",    # flake8-gettext
  "PLC",    # Pylint conventions
  "PLE",    # Pylint errors
  "PLR09",  # Pylint refactoring: max-args, max-branches, max returns, max-statements
  "PYI",    # flake8-pyi
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules
  "T10",    # flake8-debugger
  "TCH",    # flake8-type-checking
  "TID",    # flake8-tidy-imports
  "W",      # pycodestyle
  "YTT",    # flake8-2020
]

line-length = 172
target-version = "py38"

[tool.ruff.mccabe]
max-complexity = 100

[tool.ruff.per-file-ignores]
"src/pyrfc/__init__.py" = ["F401"]
"tests/test_server.py" = ["E402"]

[tool.ruff.pylint]
max-args = 11
max-branches = 110
max-returns = 8
max-statements = 289