[build-system]
requires = ["Cython ~= 0.29.0", "setuptools ~= 67.7.0", "wheel ~= 0.40.0", "importlib-metadata"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "pyrfc"
version = "2.8.31"
readme = "README.md"
license = { file = "LICENSES/Apache-2.0.txt" }
description = "Python bindings for SAP NetWeaver RFC SDK"
authors = [ { name = "SAP SE"} ]
maintainers = [ { name = "Srdjan Boskovic", email = "srdjan.boskovic@sap.com" } ]
requires-python = ">=3.7,<3.8"
keywords = ["pyrfc", "sap", "nwrfc", "sapnwrfc", "abap"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
    "importlib-metadata"
]

[project.urls]
homepage = "https://github.com/SAP/PyRFC"
documentation = "http://sap.github.io/PyRFC"
repository = "https://github.com/SAP/PyRFC.git"

[tool.cython-lint]
max-line-length = 148

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false
license-files=["LICENSES/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyrfc"]

[tool.setuptools.dynamic]
readme = {file = "README.md"}
